--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,5 +72,31 @@ h2 {
     45deg,
     hsla(168, 85%, 52%, 0.5),
     hsla(263, 88%, 45%, 0.5) 100%
-  )
+  );
+}
+
+#map {
+  margin-bottom: 15px;
+}
+
+.info {
+  padding: 6px 8px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255,255,255,0.8);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
+
+.legend {
+  line-height: 18px;
+  color: #555;
+}
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
 }
